<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_country"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_cis"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cis" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/size_8dp"
            android:alpha="0.3"
            android:background="@android:color/black" />

        <RadioButton
            android:id="@+id/rb_asia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/asia" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/size_8dp"
            android:alpha="0.3"
            android:background="@android:color/black" />

        <RadioButton
            android:id="@+id/rb_europe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/europe" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/size_8dp"
            android:alpha="0.3"
            android:background="@android:color/black" />

        <RadioButton
            android:id="@+id/rb_usa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/usa" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/size_8dp"
            android:alpha="0.3"
            android:background="@android:color/black" />

        <RadioButton
            android:id="@+id/rb_africa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/africa" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/size_8dp"
            android:alpha="0.3"
            android:background="@android:color/black" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>