<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_16dp"
        android:paddingEnd="@dimen/padding_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/size_100dp"
                android:layout_height="@dimen/size_100dp"
                android:layout_marginTop="@dimen/padding_16dp"
                android:layout_marginEnd="@dimen/padding_16dp"
                android:layout_marginBottom="@dimen/padding_16dp"
                android:padding="@dimen/padding_4dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/circleImageView"
                app:srcCompat="@drawable/banner_fake_image"
                app:strokeColor="@color/main_blue"
                app:strokeWidth="@dimen/size_4dp" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="3"
                android:textColor="@color/main_blue"
                android:textSize="@dimen/text_20sp"
                tools:text="John Doe Великолепный" />
        </LinearLayout>

        <com.motionweb.halal.customview.NavigationRowView
            android:id="@+id/nrv_lk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8dp"
            app:icon="@drawable/ic_account"
            app:show_chevron="true"
            app:title="@string/lk" />

        <com.motionweb.halal.customview.NavigationRowView
            android:id="@+id/nrv_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8dp"
            app:icon="@drawable/ic_ad"
            app:show_chevron="true"
            app:title="@string/event" />

        <com.motionweb.halal.customview.NavigationRowView
            android:id="@+id/nrv_qa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8dp"
            app:icon="@drawable/ic_message"
            app:show_chevron="true"
            app:title="@string/q_a" />

        <com.motionweb.halal.customview.NavigationRowView
            android:id="@+id/nrv_about_halal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8dp"
            app:icon="@drawable/ic_award"
            app:show_chevron="true"
            app:title="@string/about_halal" />

        <com.motionweb.halal.customview.NavigationRowView
            android:id="@+id/nrv_about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8dp"
            app:icon="@drawable/ic_attention"
            app:show_chevron="true"
            app:title="@string/about_app" />

        <com.motionweb.halal.customview.NavigationRowView
            android:id="@+id/nrv_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8dp"
            app:icon="@drawable/ic_share"
            app:show_chevron="true"
            app:title="@string/share" />

        <com.motionweb.halal.customview.NavigationRowView
            android:id="@+id/nrv_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8dp"
            android:layout_marginBottom="@dimen/padding_16dp"
            app:icon="@drawable/ic_settings"
            app:show_chevron="true"
            app:title="@string/settings" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>