<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_send_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_question"
        style="@style/BlueBoldTitleAppearance"
        android:textSize="@dimen/text_24sp"
        android:layout_marginTop="@dimen/padding_16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_input_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="7"
        android:hint="@string/tap_to_edit"
        android:padding="@dimen/padding_8dp"
        android:gravity="start"
        android:background="@drawable/bg_white_rounded"
        android:layout_marginTop="@dimen/padding_8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_send_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_margin="@dimen/padding_16dp"
        android:padding="@dimen/padding_16dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/main_blue"
        app:strokeColor="@color/main_blue"
        app:layout_constraintTop_toBottomOf="@id/et_input_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16dp"
        android:text="@string/save"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/main_blue"
        app:strokeColor="@color/main_blue"
        app:layout_constraintTop_toBottomOf="@id/et_input_question"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>