<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresher"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_8dp"
        android:paddingEnd="@dimen/padding_8dp">

        <com.motionweb.halal.customview.PrayerView
            android:id="@+id/prayer_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:top_text="@string/calendar"
            android:layout_marginTop="@dimen/padding_16dp" />

        <TextView
            android:id="@+id/tv_search_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_8dp"
            android:layout_marginTop="@dimen/size_24dp"
            android:text="@string/search_label_text" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:layout_marginHorizontal="@dimen/padding_8dp"
            android:layout_marginTop="@dimen/size_4dp"
            android:background="@drawable/ic_search_field"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/size_16dp"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:paddingStart="@dimen/size_8dp"
            android:paddingEnd="@dimen/size_8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ecode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_16dp"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/padding_16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_ecode" />

        <TextView
            android:id="@+id/empty_label"
            style="@style/TitleTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/empty_list"
            android:textSize="@dimen/text_32sp"
            android:visibility="gone" />

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>